fix: map size on mobile, marker color

--- a/src/components/views/orders/Order.css
+++ b/src/components/views/orders/Order.css
@@ -39,7 +39,7 @@
 }
 
 .marker > img {
-  height: 70%;
+  height: 40%;
   width: auto;
 }
 
